# Consultator

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  ANALYSE_OBJECTIF_COVERAGE_FINAL.md  CHANGELOG_V122.md  CHATBOT_TIMEOUT_FIX.md  CI_CD_GUIDE.md  CI_CD_STATUS_REPORT.md  CORRECTIONS_SONARCLOUD_20251008.md  CORRECTIONS_TESTS_RESUME.md  CORRECTIONS_TESTS_SUMMARY.md  CORRECTION_BM_STATISTICS.md  CORRECTION_CI_CD.md  CORRECTION_CI_CD_V2.md  CORRECTION_DATAFRAME_BUG.md  CORRECTION_PIPELINE_CICD_SONARCLOUD.md  CORRECTION_SONARCLOUD_PHASES_1_2.md  COVERAGE_ANALYSIS_AND_PLAN.md  COVERAGE_CORRECTION_SUMMARY.md  DASHBOARD_SYSTEM_GUIDE.md  DATABASE_MANAGEMENT.md  Data Quanteam 1 ligne.xlsx  Dossier de Compétences MARC LEBOEUF - Quanteam.pptx  FINAL_SEARCH_CORRECTIONS.md  FIX_SONARCLOUD_80_PERCENT.md  FLAKY_TESTS_PHASE54.md  GROK_SETUP.md  GUIDE_BONNES_PRATIQUES_CICD.md  GUIDE_RAPIDE_DASHBOARD.md  GUIDE_SONARCLOUD_SECURITY_HOTSPOTS.md  GUIDE_SONAR_TESTS.md  GUIDE_VISUEL_DASHBOARD.md  IMPORT_CLEANER_PROJECT_README.md  IMPORT_CLEANER_README.md  INDEX_DOCUMENTATION_DASHBOARD.md  INSTALLATION.md  MISSION_ACCOMPLISHED_COVERAGE.md  MISSION_ACCOMPLISHED_FIX_SONARCLOUD.md  MISSION_COVERAGE_REPORT.md  (+347 more)
.githooks/: pre-commit  pre-commit.ps1
.github/: copilot-instructions.md
.streamlit/: .streamlitignore  config.toml
app/: main.py  main_backup.py  main_new.py  main_optimized.py  main_optimized_simple.py  main_original_backup.py  main_preloading.py  main_simple.py  main_test.py  test_streamlit_debug.py
config/: performance.py  settings.py
data/: .gitkeep  consultator.db
docs/: Consultator_Documentation.docx  Consultator_Documentation_Complete.docx  Consultator_Documentation_Final.docx  Consultator_Documentation_Pro.docx  Consultator_Documentation_Pro_v2.docx  Consultator_Documentation_Ultime.docx  Rapport_Qualite_Code_Consultator.docx  api.rst  conf.py  create_final_word_doc.py  create_pro_word_doc.py  create_pro_word_doc_v2.py  create_ultimate_word_doc.py  create_word_doc.py  create_word_doc_enhanced.py  quality_report.md  quickstart.rst  tutorials.rst  ~$nsultator_Documentation_Final.docx  ~$nsultator_Documentation_Ultime.docx
reports/: Audit_Qualite_Consultator_20250910_134032.docx  Audit_Qualite_Consultator_20250910_134846.docx  Audit_Qualite_Consultator_20250910_141417.docx  Audit_Qualite_Consultator_20250910_141640.docx  BILAN_FINAL.md  CORRECTION_SONARCLOUD_FINAL.md  MISSION_ACCOMPLIE_SONARCLOUD.md  PLAN_ACTION_COUVERTURE.md  PLAN_COUVERTURE_80.md  PROJET_COUVERTURE_80_FINAL.md  RAPPORT_FINAL_COMPLET.md  RAPPORT_QUALITE_CODE.md  Rapport_Qualite_Code_Consultator_20250821_155424.docx  Rapport_Qualite_Code_Consultator_20250908_163049.docx  Rapport_Qualite_Code_Consultator_20250908_191125.docx  Rapport_Qualite_Code_Consultator_20250909_131520.docx  Rapport_Qualite_Code_Consultator_V13_20250904_134615.docx  (+76 more)
(+533 files in other folders)
